fixed misaligned grid on the vote page

--- a/css/component.css
+++ b/css/component.css
@@ -17,7 +17,7 @@ nav a {
 	letter-spacing: 1px;
 	font-weight: 400;
 	text-shadow: 0 0 1px rgba(255,255,255,0.3);
-	font-size: 1.35em;
+	font-size: 1em;
 }
 
 nav a:hover,
@@ -256,6 +256,7 @@ nav a:focus {
 	color: #566473;
 	text-shadow: none;
 	font-weight: 700;
+  font-size: 14px;
 }
 
 .cl-effect-7 a::before,
