--- a/css/demo.css
+++ b/css/demo.css
@@ -108,7 +108,8 @@
 .color-4 {
 	display: inline-block;
 	float: right;
-	margin-right: 20px;
+	margin-right: 10px;
+
 }
 
 .color-41 {
